src/objects/Loan_Application__c.object
<CustomObject>
    <fields>
        <fullName>APR__c</fullName>
        <label>APR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Aborted_Referral_Codes__c</fullName>
        <label>Aborted Referral Codes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Valid_Until__c</fullName>
        <label>Application Valid Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <label>Broker</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Decline_Reason__c</fullName>
        <label>Cancel/Decline Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loan Application</relationshipLabel>
        <relationshipName>Loan_References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Documents_Last_Updated_Date__c</fullName>
        <label>Documents Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Errored_Referral_Codes__c</fullName>
        <label>Errored Referral Codes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expitry_Date__c</fullName>
        <label>Expirty Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Payment__c</fullName>
        <label>First Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fraud_Retro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fraud Retro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <label>Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Application_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Application_Date__c</fullName>
        <label>Loan Application Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Application_Status__c</fullName>
        <label>Loan Application Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_ID__c</fullName>
        <externalId>true</externalId>
        <label>Loan ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Repayment_Amount__c</fullName>
        <label>Monthly Repayment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <label>Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Day__c</fullName>
        <label>Payment Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picked_Up_In_Underwriting_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Picked Up In Underwriting Web</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickPay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QuickPay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Referal_Codes__c</fullName>
        <label>Referal Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Codes__c</fullName>
        <label>Referral Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Status__c</fullName>
        <label>Residential Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Triggered_Referral_Codes__c</fullName>
        <label>Triggered Referral Codes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Loan Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Loan_Application_Amount__c</columns>
        <columns>Loan_Application_Date__c</columns>
        <columns>Loan_Application_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Fraud_Retro__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Auto_Loans</fullName>
        <columns>NAME</columns>
        <columns>Loan_Application_Status__c</columns>
        <columns>Broker__c</columns>
        <columns>Loan_Application_Date__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Loan_Application_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Broker__c</field>
            <operation>startsWith</operation>
            <value>AB</value>
        </filters>
        <label>Auto Loans</label>
        <sharedTo>
            <roleAndSubordinates>Case_Prep_Team_Lead</roleAndSubordinates>
            <roleAndSubordinates>UW_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Loan Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Application</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Forbid_to_edit_Loan_Reference_field</fullName>
        <active>true</active>
        <description>ZOPA-138</description>
        <errorConditionFormula>ISCHANGED(Name)&amp;&amp; $Profile.Name != &apos;System Administrator&apos; &amp;&amp; $Profile.Name != &apos;Integration&apos;</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You are not able to edit this field.</errorMessage>
    </validationRules>
</CustomObject>